mejora en el README.md para tener mas informacion para lanzar